--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,7 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "illuminate/contracts": "5.1.*",
-        "illuminate/container": "5.1.*",
-        "illuminate/support": "5.1.*",
-        "illuminate/log": "5.1.*",
-        "illuminate/queue": "5.1.*",
+        "laravel/framework": "5.1.*",
         "pda/pheanstalk": "^3.1"
     },
     "autoload": {
